@@ -1,0 +1,16 @@
+Two roots: ok, ok.
+Two roots: ok, ok.
+Two roots: ok, ok.
+Two roots: ok, ok.
+Two roots: ok, ok.
+Two roots: ok, ok.
+One root: ok.
+One root: ok.
+One root: ok.
+No roots.
+No roots.
+No roots.
+Two roots: ok, ok.
+Two roots: ok, ok.
+One root: ok.
+Two roots: ok, ok.
